feat: add supabase

--- a/styles/style.css
+++ b/styles/style.css
@@ -15162,6 +15162,7 @@ fieldset:disabled .wizard > .actions a,
   justify-content: space-between;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+  background-color: #fff !important;
 }
 
 .navbar > .container,
